# emoji-snake

./: Makefile  Pipfile  README.md  food.py  game.py  grid.py  lib.py  main.py  player.py  pyproject.toml
emoji-snake/: game.py  grid.py  player.py
